added Express & API support

--- a/public/style.css
+++ b/public/style.css
@@ -31,3 +31,17 @@ button {
 		display: flex;
 	}
 }
+
+
+.link {
+	border: 0.25em solid;
+	margin: 1em;
+	padding: 1em;
+	width: 12em;
+	text-align: center;
+	border-radius: 0.5em;
+}
+
+.link:hover {
+	background-color: plum;
+}
